--- a/src/integrationTest/resources/application.yaml
+++ b/src/integrationTest/resources/application.yaml
@@ -51,6 +51,7 @@ flagType:
 judicial:
   api:
     baseUrl: ${JUDICIAL_API_URL:http://rd-judicial-api-aat.service.core-compute-aat.internal}
+    usersPageSize: ${JUDICIAL_USERS_PAGE_SIZE:200}
 
 refdata_common:
   api:
