--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -219,6 +219,8 @@ feature:
     enabled: ${SECURITY_CLASSIFICATION:true}
   access-profiles:
     enabled: ${ACCESS_PROFILES_ENABLED:true}
+  update-case:
+    enabled: ${DSS_UPDATE_CASE_ENABLED:false}
 
 caseinfo:
   apps:
