--- a/src/functionalTest/resources/application.yaml
+++ b/src/functionalTest/resources/application.yaml
@@ -125,6 +125,8 @@ feature:
     enabled: ${SECURITY_CLASSIFICATION:false}
   access-profiles:
     enabled: ${ACCESS_PROFILES_ENABLED:true}
+  update-case:
+    enabled: ${DSS_UPDATE_CASE_ENABLED:true}
 
 caseinfo:
   apps:
@@ -133,8 +135,8 @@ caseinfo:
       eventIds:
         createEvent: citizen-cic-create-dss-application
         updateEvent: citizen-cic-update-dss-application
+        updateCaseEvent: citizen-cic-dss-update-case
         submitEvent: citizen-cic-submit-dss-application
-        dssUpdateEvent: citizen-cic-dssUpdate-dss-application
       caseTypeOfApplication:
         - CIC
 
