--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -28,8 +28,8 @@ spring:
 
 logging:
   level:
-    root: debug
-    web: debug
+    root: info
+    web: info
 
 
 springdoc:
@@ -219,8 +219,6 @@ feature:
     enabled: ${CLONE_BUNDLING_FEATURE:true}
   bundling-stitch:
     enabled: ${STITCH_BUNDLING_FEATURE:true}
-  dss-frontend:
-    enabled: ${DSS_FRONTEND_FEATURE:true}
   security-classification:
     enabled: ${SECURITY_CLASSIFICATION:true}
   access-profiles:
