--- a/src/functionalTest/resources/application.yaml
+++ b/src/functionalTest/resources/application.yaml
@@ -43,6 +43,9 @@ idam:
   systemupdate:
     username: ${IDAM_SYSTEM_UPDATE_USERNAME:dummysystemupdate@test.com}
     password: ${IDAM_SYSTEM_UPDATE_PASSWORD:dummy}
+  citizen:
+    username: ${IDAM_CITIZEN_USERNAME:dummycitizen@test.com}
+    password: ${IDAM_CITIZEN_PASSWORD:dummy}
   client:
     id: 'sptribs-case-api'
     secret: ${OAUTH2_CLIENT_SECRET:dummy}
