--- a/src/functionalTest/resources/application.yaml
+++ b/src/functionalTest/resources/application.yaml
@@ -128,6 +128,8 @@ feature:
     enabled: ${ACCESS_PROFILES_ENABLED:true}
   update-case:
     enabled: ${DSS_UPDATE_CASE_ENABLED:true}
+  wa:
+    enabled: ${WA_FEATURE_ENABLED:false}
 
 caseinfo:
   apps:
