--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -224,6 +224,8 @@ feature:
     enabled: ${ACCESS_PROFILES_ENABLED:true}
   update-case:
     enabled: ${DSS_UPDATE_CASE_ENABLED:false}
+  wa:
+    enabled: ${WA_FEATURE_ENABLED:false}
 
 caseinfo:
   apps:
