--- a/src/functionalTest/resources/application.yaml
+++ b/src/functionalTest/resources/application.yaml
@@ -128,6 +128,8 @@ feature:
     enabled: ${ACCESS_PROFILES_ENABLED:true}
   update-case:
     enabled: ${DSS_UPDATE_CASE_ENABLED:true}
+  dtsstci-861:
+    enabled: ${DTSSTCI_861_ENABLED:true}
 
 caseinfo:
   apps:
