--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -223,7 +223,9 @@ feature:
   access-profiles:
     enabled: ${ACCESS_PROFILES_ENABLED:true}
   update-case:
-    enabled: ${DSS_UPDATE_CASE_ENABLED:false}
+    enabled: ${DSS_UPDATE_CASE_ENABLED:true}
+  dtsstci-861:
+    enabled: ${DTSSTCI_861_ENABLED:true}
 
 caseinfo:
   apps:
