--- a/charts/sptribs-case-api/Chart.yaml
+++ b/charts/sptribs-case-api/Chart.yaml
@@ -43,11 +43,11 @@ dependencies:
     version: 1.0.31
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
     condition: em-stitching.enabled
-    #Work Allocation
-#  - name: camunda-bpm
-#    version: 0.0.47
-#    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
-#    condition: wa.enabled
+#    Work Allocation
+  - name: camunda-bpm
+    version: 0.0.47
+    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
+    condition: wa.enabled
 #  - name: wa-task-management-api
 #    version: 0.0.52
 #    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
