--- a/charts/sptribs-case-api/values.preview.template.yaml
+++ b/charts/sptribs-case-api/values.preview.template.yaml
@@ -10,8 +10,8 @@ java:
     CASE_DOCUMENT_AM_BASEURL: http://${SERVICE_NAME}-ccd-case-document-am-api
     BUNDLING_API_URL: https://em-ccdorc-${SERVICE_FQDN}
     CITIZEN_UPDATE_CASE_STATE_ENABLED: true
-    POSTGRES_HOST: ${SERVICE_NAME}-postgresql
-    POSTGRES_NAME: sptribs-case-api
+    POSTGRES_HOST: sptribs-preview.postgres.database.azure.com
+    POSTGRES_NAME: "{{ .Values.global.databaseNamePrefix }}sptribs-case-api"
     POSTGRES_USERNAME: ${SPTRIBS_POSTGRES_USERNAME_PREVIEW}
     POSTGRES_PASSWORD: ${SPTRIBS_POSTGRES_PASSWORD_PREVIEW}
     POSTGRES_CONNECTION_OPTIONS: ""
@@ -102,8 +102,10 @@ ccd:
     dmStoreUrl: http://dm-store-aat.service.core-compute-aat.internal
     ccdAdminWebIngress: admin-web-${SERVICE_FQDN}
     ccdApiGatewayIngress: gateway-${SERVICE_FQDN}
-    postgresUsername: ${CCD_GLOBAL_POSTGRES_USERNAME_PREVIEW}
-    postgresPassword: ${CCD_GLOBAL_POSTGRES_PASSWORD_PREVIEW}
+    postgresUsername: hmcts
+    postgresHostname: "sptribs-case-api-preview.postgres.database.azure.com"
+    postgresSecret: postgres
+    databaseNamePrefix: "pr-${CHANGE_ID}-"
     s2sUrl: http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
 
   ccd-api-gateway-web:
