[DTSSTCI-578] Update Chart.yaml and add values.wa.preview.template.yaml

--- a/charts/sptribs-case-api/Chart.yaml
+++ b/charts/sptribs-case-api/Chart.yaml
@@ -52,3 +52,7 @@ dependencies:
     version: ~0.1.7
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
     condition: wa.enabled
+  - name: servicebus
+    version: 1.0.4
+    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
+    condition: wa.enabled
