--- a/charts/sptribs-case-api/values.wa.preview.template.yaml
+++ b/charts/sptribs-case-api/values.wa.preview.template.yaml
@@ -576,12 +576,40 @@ postgres:
   flexibleserver: sptribs-preview
 #  setup:
 #    databases:
-
+#      - name: "pr-${CHANGE_ID}-sptribs-case-api"
+#      - name: "pr-${CHANGE_ID}-data-store"
+#      - name: "pr-${CHANGE_ID}-definition-store"
+#      - name: "pr-${CHANGE_ID}-role-assignment"
+#      - name: "pr-${CHANGE_ID}-user-profile"
+#      - name: "pr-${CHANGE_ID}-emstitch"
+#
+#      #these for wa?
+#      - name: "pr-${CHANGE_ID}-camunda"
+#      - name: "pr-${CHANGE_ID}-wa-task-management-api"
+#      - name: "pr-${CHANGE_ID}-wa-case-event-handler"
+#      - name: "pr-${CHANGE_ID}-wa_workflow_api"
+#      - name: "pr-${CHANGE_ID}-cft_task_db"
 
 wa:
   enabled: true
-  postgresql:
-    enabled: false
+  wa-case-event-handler:
+    java:
+      secrets:
+        AZURE_SERVICE_BUS_CONNECTION_STRING:
+          secretRef: sptribs-sb-preview
+          key: connectionString
+      environment:
+        CCD_URL: http://{{ .Release.Name }}-ccd-data-store-api
+        CCD_SEARCH_URL: http://{{ .Release.Name }}-ccd-data-store-api
+        ROLE_ASSIGNMENT_URL: http://{{ .Release.Name }}-am-role-assignment-service
+        AZURE_SERVICE_BUS_TOPIC_NAME: ${SERVICE_NAME}-asb-ccd-case-events
+        AZURE_SERVICE_BUS_SUBSCRIPTION_NAME: ${SERVICE_NAME}-asb-ccd-case-events
+        AZURE_SERVICE_BUS_CCD_CASE_EVENTS_SUBSCRIPTION_NAME: ${SERVICE_NAME}-asb-ccd-case-events
+  #disable wa db as we are using the postgres flexible server
+  wa:
+    postgresql:
+      enabled: false
+
 
 ccd-message-publisher:
   java:
@@ -601,4 +629,4 @@ ccd-message-publisher:
       DATA_STORE_DB_USERNAME: hmcts
       DATA_STORE_DB_PASSWORD: ${POSTGRES_PASSWORD}
       DATA_STORE_DB_OPTIONS: "?stringtype=unspecified&reWriteBatchedInserts=true&sslmode=require"
-      CCD_CASE_EVENTS_DESTINATION: "${SERVICE_NAME}-servicebus-ccd-case-events"
+      CCD_CASE_EVENTS_DESTINATION: "${SERVICE_NAME}-asb-ccd-case-events"
